update various things

--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -4,23 +4,13 @@ $visual-grid: true;
 @import "components/base/base";
 @import "components/harp-neat/scss/neat";
 
-// composants custom
 @import "components/_buttons.scss";
+@import "components/_typography.scss";
+@import "components/_layout.scss";
+@import "components/_header.scss";
 
 body{
 	background: #fff;
 	color: #444343;
 	margin: 0;
-}
-
-h1,h2,h3,h4,h5,h6{
-	font-weight: 500;
-}
-
-.container {
-	@include outer-container;
-	padding: 0 20px;
-	@include media($xlarge-screen) {
-		padding: 0;
-	}
 }
