--- a/public/homepage/_layout.jade
+++ b/public/homepage/_layout.jade
@@ -4,9 +4,12 @@ html
 		meta(charset="utf-8")
 		meta(name="viewport" content="width=device-width")
 		script(src='/bundle.js')
+
 		link(rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,700,500")
 		link(rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,500,600,700,800")
 		link(rel="stylesheet" href="/style/main.css")
+		link(rel="stylesheet" href="/style/pages/homepage.css")
+
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js")
 	body
 		header.navigation
