--- a/public/homepage/index.jade
+++ b/public/homepage/index.jade
@@ -2,7 +2,10 @@
 	.hero-inner
 		.hero-copy
 			.container
-				h1 Short description of Product
+				h1 Start new Laponie Adventure
 				p
 					| A few reasons why this product is worth using, who it's for and why they need it.
-				button Learn More
+				a(class="button white border" href="/") Discover Tour
+.wrapper
+	.container
+		h2 you can choose your best adventure
