--- a/public/style/components/_header.scss
+++ b/public/style/components/_header.scss
@@ -259,3 +259,10 @@ header.navigation {
   }
 
 }
+
+.homepage{
+  header.navigation{
+    position: absolute;
+    background: transparent;
+  }
+}
