--- a/public/style/pages/homepage.scss
+++ b/public/style/pages/homepage.scss
@@ -8,9 +8,9 @@
   $hero-background-bottom: adjust-hue($hero-background-top, -70);
   $hero-color: white;
   $gradient-angle: 10deg;
-  $hero-image: 'https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png';
+  $hero-image: "../../images/homepage-hero.png";
 
-  @include background(url($hero-image), linear-gradient($gradient-angle, $hero-background-bottom, $hero-background-top), no-repeat $hero-background-top scroll);
+  @include background(url($hero-image), no-repeat $hero-background-top scroll);
 
   background-repeat: no-repeat;
   background-position: top;
@@ -25,38 +25,34 @@
   .hero-inner {
     @include outer-container;
     @include clearfix;
-    padding: 3em;
+    padding: 6em 0 1em;
     margin: auto;
-    text-align: center;
     color: $hero-color;
 
-    // button {
-    //   @include button(simple, $base-background-color);
-    //   font-size: $base-font-size;
-    //   outline: none;
-    // }
+    @include media($medium-screen) {
+      padding: 8em 0 3em 0;
+    }
+    @include media($large-screen) {
+      padding: 20em 0 12em 0;
+    }
 
     .hero-copy {
-      text-align: center;
-      
-      h1 {
-        font-size: 1.6em;
-        margin-bottom: .5em;
 
+      text-align: center;
+
+      h1{
+        text-transform: uppercase;
+        font-size: 2em;
         @include media($large-screen) {
-          font-size: 1.8em;
+          font-size: 4em;
         }
       }
 
       p {
-        font-family: $serif;
         margin: auto;
         margin-bottom: 3em; 
-        font-weight: 200;
-        line-height: 1.4em;
 
         @include media($large-screen) {
-          font-size: 1.1em;
           max-width: 40%;
         }
       }
