--- a/components/base/_variables.scss
+++ b/components/base/_variables.scss
@@ -1,12 +1,20 @@
 // Typography
 $sans-serif: $opensans;
-$serif: $roboto;
+$serif: $lato;
 $base-font-family: $sans-serif;
 $header-font-family: $serif;
 
 // Font Sizes
 $base-font-size: 1em;
-$h1-font-size: $base-font-size * 2.25;
+// ORIGINE
+// $h1-font-size: $base-font-size * 2.25;
+// $h2-font-size: $base-font-size * 2;
+// $h3-font-size: $base-font-size * 1.75;
+// $h4-font-size: $base-font-size * 1.5;
+// $h5-font-size: $base-font-size * 1.25;
+// $h6-font-size: $base-font-size;
+
+$h1-font-size: $base-font-size * 3;
 $h2-font-size: $base-font-size * 2;
 $h3-font-size: $base-font-size * 1.75;
 $h4-font-size: $base-font-size * 1.5;
