--- a/public/style/components/_buttons.scss
+++ b/public/style/components/_buttons.scss
@@ -1,8 +1,50 @@
+@mixin button($background-color, $text-color) {
+  -webkit-font-smoothing: antialiased;
+  background-color: $background-color;
+  border-radius: $base-border-radius;
+  color: $text-color;
+  display: inline-block;
+  font-size: $base-font-size;
+  font-weight: bold;
+  line-height: 1;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-transform: uppercase;
+  @include transition (all 2.0s ease);
+  
+  &:focus{outline: none;}
+
+  &:hover {
+    background-color: darken( $background-color , 10% );
+    color: $text-color;
+    @include transition-duration(.2s);
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+
+  &.border{
+    color: $text-color;
+    background: transparent;
+    border: 2px solid $background-color;
+    &:hover{
+      background: transparent;
+      border-color: darken( $background-color , 10% );
+    }
+  }
+
+}
+
 .button{
 	&.grey{
 		@include button( #ddd, grey );
 	}
 	&.pink{
 		@include button( pink, white );
+	}
+	&.white{
+		@include button( white, white );
 	}
 }
