--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -1,7 +1,7 @@
 doctype
 html
 	head
-		include ../partials/_head.jade
+		include ./partials/_head.jade
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js")
 	body
 		include ./partials/_menu.jade
