--- a/public/style/components/_layout.scss
+++ b/public/style/components/_layout.scss
@@ -11,3 +11,94 @@
 		padding: 0;
 	}
 }
+
+
+// #######################################
+// Hero
+// #######################################
+// - Large
+// - Medium
+// - Small
+// #######################################
+
+.hero {
+  $hero-background-top: $base-accent-color; 
+  $hero-background-bottom: adjust-hue($hero-background-top, -70);
+  $hero-color: white;
+  $gradient-angle: 10deg;
+  // $hero-image: "../../images/homepage-hero.png";
+
+  @include background(no-repeat $hero-background-top scroll);
+
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  padding-bottom: 4em;
+
+  .hero-logo img {
+    height: 3em;
+    margin-bottom: 2.5em;
+  }
+
+  .hero-inner {
+    @include outer-container;
+    @include clearfix;
+    padding: 6em 0 1em;
+    margin: auto;
+    color: $hero-color;
+
+    @include media($medium-screen) {
+      padding: 8em 0 3em 0;
+    }
+    @include media($large-screen) {
+      padding: 20em 0 12em 0;
+    }
+
+    .hero-copy {
+
+      text-align: center;
+
+      h1{
+        text-transform: uppercase;
+        font-size: 2em;
+        @include media($large-screen) {
+          font-size: 4em;
+        }
+      }
+
+      p {
+        margin: auto;
+        margin-bottom: 3em; 
+
+        @include media($large-screen) {
+          max-width: 40%;
+        }
+      }
+    }
+  }
+}
+
+.hero{
+	&.medium{
+		.hero-inner {
+			padding: 6em 0 1em;
+			@include media($medium-screen) {
+				padding: 8em 0 3em 0;
+			}
+			@include media($large-screen) {
+				padding: 20em 0 12em 0;
+			}
+		}	
+	}
+	&.small{
+		.hero-inner {
+			padding: 6em 0 1em;
+			@include media($medium-screen) {
+				padding: 8em 0 3em 0;
+			}
+			@include media($large-screen) {
+				padding: 20em 0 12em 0;
+			}
+		}	
+	}
+}
