--- a/public/homepage/index.jade
+++ b/public/homepage/index.jade
@@ -1,11 +1,67 @@
-.hero
+div(class="hero" style="background-image: url('/images/homepage-hero.png')")
 	.hero-inner
 		.hero-copy
 			.container
 				h1 Start new Laponie Adventure
 				p
-					| A few reasons why this product is worth using, who it's for and why they need it.
+					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
+				p
+					| We are located in the north of sweden, near Kiruna.
+				p
+					| We are only 6 km away from ice Hotel.
+
 				a(class="button white border" href="/") Discover Tour
-.wrapper
+
+.wrapper.center
 	.container
 		h2 you can choose your best adventure
+		p
+			| lorem ipsum dolor sit atmet
+
+
+div(class="hero left" style="background-image: url('/images/homepage-hero.png')")
+	.hero-inner
+		.hero-copy
+			.container
+				h2 Adventure tour
+				.time 2 jours et 3 nuits
+				p
+					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
+				p
+					| We are located in the north of sweden, near Kiruna.
+				p
+					| We are only 6 km away from ice Hotel.
+
+				a(class="button pink soft" href="/") En savoir plus
+	.overlay
+
+.wrapper.pink.soft
+	.container
+		.cards
+			.card
+				.card-image
+					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
+				.card-header
+					h3 Adventure
+				.card-content
+					p
+						| lorem ipsum dolor sit atmet
+					a(class="button white" href="/") En savoir plus
+			.card
+				.card-image
+					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
+				.card-header
+					h3 Adventure
+				.card-content
+					p
+						| lorem ipsum dolor sit atmet
+					a(class="button white" href="/") En savoir plus
+			.card
+				.card-image
+					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
+				.card-header
+					h3 Adventure
+				.card-content
+					p
+						| lorem ipsum dolor sit atmet
+					a(class="button white" href="/") En savoir plus
