--- a/public/style/components/_typography.scss
+++ b/public/style/components/_typography.scss
@@ -8,3 +8,22 @@ h1,h2,h3,h4,h5,h6{
 	font-weight: 900;
 	text-transform: uppercase;
 }
+
+.time{
+	font-size: 1.8em;
+	line-height: 1.8em;
+}
+
+h1{
+	font-size: 2em;
+	@include media($large-screen) {
+		font-size: 4em;
+	}
+}
+
+h2{
+	font-size: 2em;
+	@include media($large-screen) {
+		font-size: 2em;
+	}
+}
