--- a/public/style/components/_layout.scss
+++ b/public/style/components/_layout.scss
@@ -12,6 +12,17 @@
 	}
 }
 
+.wrapper{
+  .container{
+    padding: 6em 0;
+  }
+  &.pink{
+    &.soft{
+      background: $soft-pink;
+      color: white;
+    }
+  }
+}
 
 // #######################################
 // Hero
@@ -19,6 +30,7 @@
 // - Large
 // - Medium
 // - Small
+// - 50 50
 // #######################################
 
 .hero {
@@ -34,6 +46,7 @@
   background-position: top;
   background-size: cover;
   padding-bottom: 4em;
+  text-align: center;
 
   .hero-logo img {
     height: 3em;
@@ -56,24 +69,14 @@
 
     .hero-copy {
 
-      text-align: center;
-
-      h1{
-        text-transform: uppercase;
-        font-size: 2em;
-        @include media($large-screen) {
-          font-size: 4em;
-        }
-      }
-
       p {
         margin: auto;
-        margin-bottom: 3em; 
 
-        @include media($large-screen) {
-          max-width: 40%;
-        }
+        // @include media($large-screen) {
+        //   max-width: 60%;
+        // }
       }
+
     }
   }
 }
@@ -101,4 +104,93 @@
 			}
 		}	
 	}
+  &.left{
+    text-align: left;
+    position: relative;
+
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    .overlay{
+      width: 100%;
+      height: 100%;
+      background: rgba( $dark-pink, 0.8 );
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    .hero-inner{
+      z-index: 4;
+      position: relative;
+    }
+  }
+}
+
+// #######################################
+// Wrapper
+// #######################################
+// - Center
+// #######################################
+
+.wrapper{
+  &.center{
+    text-align: center;
+  }
+}
+
+
+// #######################################
+// Cards
+// #######################################
+// - 30 30 30
+// #######################################
+
+.cards {
+  @include clearfix;
+}
+
+.card {
+  $card-border-color: $base-border-color;
+  $card-border: 1px solid $card-border-color;
+  $card-background: lighten($card-border-color, 10);
+  $card-header-background: $card-background;
+  $card-hover-background: lighten($card-background, 5);
+  $card-image-background: #DBD199;
+  $card-image-hover-background: lighten($card-image-background, 5);
+  $card-stats-color: lighten($base-accent-color, 10);
+
+  @include transition (all 0.2s ease-in-out);
+  margin-bottom: $base-spacing;
+  cursor: pointer;
+  position: relative;
+  text-align: center;
+
+  @include media($medium-screen) {
+    @include span-columns(4);  
+    @include omega(3n);
+  }
+
+  .card-image {
+    overflow: hidden;
+    max-height: 150px;
+
+    img {
+      width: 100%;
+      @include transition (all 0.2s ease-in-out);
+      background: $card-image-background;
+    }
+  }
+
+
+  .card-header {
+    @include transition (all 0.2s ease-in-out);
+    padding: $base-spacing/3 $gutter/2;
+  }
+
+  .card-content {
+    padding: $base-spacing/2 $gutter/2;
+    font-size: .9em;
+    line-height: 1.5em;
+  }
+
 }
