--- a/public/style/pages/homepage.scss
+++ b/public/style/pages/homepage.scss
@@ -1,4 +1,7 @@
-@import "components/harp-bourbon/scss/bourbon";
-@import "../settings/typography";
-@import "components/base/base";
-@import "components/harp-neat/scss/neat";
+.homepage{
+	.hero{
+		.button{
+			margin-top: 3em;
+		}
+	}
+}
