--- a/components/base/_variables.scss
+++ b/components/base/_variables.scss
@@ -41,6 +41,7 @@ $light-green: #E6EFC2;
 
 // husky voice colors 
 $dark-pink: #3B2853;
+$hard-pink: $dark-pink; // aliases
 $soft-pink: #B09FC7;
 $gray: #454545;
 
