--- a/public/homepage/index.jade
+++ b/public/homepage/index.jade
@@ -65,3 +65,17 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 					p
 						| lorem ipsum dolor sit atmet
 					a(class="button white" href="/") En savoir plus
+
+.wrapper.pink.fade
+	.container
+		.seasons
+			.season
+				h3 Autumn
+				p
+					| lorem ipsum dolor sit atmet
+				a(class="button pink hard" href="/") En savoir plus
+			.season
+				h3 Autumn
+				p
+					| lorem ipsum dolor sit atmet
+				a(class="button pink hard" href="/") En savoir plus
