--- a/components/base/_variables.scss
+++ b/components/base/_variables.scss
@@ -43,6 +43,7 @@ $light-green: #E6EFC2;
 $dark-pink: #3B2853;
 $hard-pink: $dark-pink; // aliases
 $soft-pink: #B09FC7;
+$fade-pink: #DCD0EE;
 $gray: #454545;
 
 // Background Color
