--- a/public/homepage/index.jade
+++ b/public/homepage/index.jade
@@ -1,4 +1,4 @@
-div(class="hero" style="background-image: url('/images/homepage-hero.png')")
+div(class="hero large" style="background-image: url('/images/homepage-hero.png')")
 	.hero-inner
 		.hero-copy
 			.container
@@ -32,7 +32,7 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 				p
 					| We are only 6 km away from ice Hotel.
 
-				a(class="button pink soft" href="/") En savoir plus
+				a(class="button pink soft" href="/") Adventure Tour
 	.overlay
 
 .wrapper.pink.soft
@@ -46,7 +46,7 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 				.card-content
 					p
 						| lorem ipsum dolor sit atmet
-					a(class="button white" href="/") En savoir plus
+					a(class="button white" href="/") Adventure Tour
 			.card
 				.card-image
 					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
@@ -55,7 +55,7 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 				.card-content
 					p
 						| lorem ipsum dolor sit atmet
-					a(class="button white" href="/") En savoir plus
+					a(class="button white" href="/") Adventure Tour
 			.card
 				.card-image
 					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
@@ -64,7 +64,7 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 				.card-content
 					p
 						| lorem ipsum dolor sit atmet
-					a(class="button white" href="/") En savoir plus
+					a(class="button white" href="/") Adventure Tour
 
 .wrapper.pink.fade
 	.container
@@ -73,9 +73,26 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 				h3 Autumn
 				p
 					| lorem ipsum dolor sit atmet
-				a(class="button pink hard" href="/") En savoir plus
+				a(class="button pink hard" href="/") Autumn season
 			.season
 				h3 Autumn
 				p
 					| lorem ipsum dolor sit atmet
-				a(class="button pink hard" href="/") En savoir plus
+				a(class="button pink hard" href="/") Summer season
+
+div(class="hero about" style="background-image: url('/images/stephanie-hero.png')")
+	.hero-inner
+		.hero-copy
+			.container
+				h4 About Me
+				p
+					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
+
+				a(class="button pink soft border" href="/") About Me
+
+
+
+
+
+
+
