--- a/public/style/components/_hero.scss
+++ b/public/style/components/_hero.scss
@@ -8,54 +8,68 @@
 // #######################################
 
 .hero {
-  $hero-background-top: $base-accent-color; 
-  $hero-background-bottom: adjust-hue($hero-background-top, -70);
-  $hero-color: white;
-  $gradient-angle: 10deg;
-  // $hero-image: "../../images/homepage-hero.png";
+	$hero-background-top: $base-accent-color; 
+	$hero-background-bottom: adjust-hue($hero-background-top, -70);
+	$hero-color: white;
+	$gradient-angle: 10deg;
+	// $hero-image: "../../images/homepage-hero.png";
 
-  @include background(no-repeat $hero-background-top scroll);
+	@include background(no-repeat $hero-background-top scroll);
 
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  padding-bottom: 4em;
-  text-align: center;
+	background-repeat: no-repeat;
+	background-position: top;
+	background-size: cover;
+	// padding-bottom: 4em;
+	text-align: center;
 
-  .hero-logo img {
-    height: 3em;
-    margin-bottom: 2.5em;
-  }
+	.hero-logo img {
+		height: 3em;
+		margin-bottom: 2.5em;
+	}
 
-  .hero-inner {
-    @include outer-container;
-    @include clearfix;
-    padding: 6em 0 1em;
-    margin: auto;
-    color: $hero-color;
+	.hero-inner {
+		@include outer-container;
+		@include clearfix;
+		margin: auto;
+		color: $hero-color;
 
-    @include media($medium-screen) {
-      padding: 8em 0 3em 0;
-    }
-    @include media($large-screen) {
-      padding: 20em 0 12em 0;
-    }
+		.hero-copy {
 
-    .hero-copy {
+			p {
+				margin: auto;
 
-      p {
-        margin: auto;
+				// @include media($large-screen) {
+				//   max-width: 60%;
+				// }
+			}
 
-        // @include media($large-screen) {
-        //   max-width: 60%;
-        // }
-      }
+		}
+	}
 
-    }
-  }
+	.button{
+		margin-top: 1em;
+		@include media($medium-screen) {
+			margin-top: 2em;
+		}
+		@include media($large-screen) {
+			margin-top: 3em;
+		}
+	}
+
 }
 
 .hero{
+	&.large{
+		.hero-inner {
+			padding: 6em 0 5em;
+			@include media($medium-screen) {
+				padding: 8em 0 3em 0;
+			}
+			@include media($large-screen) {
+				padding: 20em 0 12em 0;
+			}
+		} 
+	}
 	&.medium{
 		.hero-inner {
 			padding: 6em 0 1em;
@@ -78,24 +92,96 @@
 			}
 		}	
 	}
-  &.left{
-    text-align: left;
-    position: relative;
+	&.left{
+		.hero-inner {
+			padding: 4em 0;
+			@include media($medium-screen) {
+				padding: 4em 0;
+			}
+			@include media($large-screen) {
+				padding: 5em 0;
+			}
+		} 
+	}
+	&.about{
+		.hero-inner {
+			padding: 2em 0;
+			@include media($medium-screen) {
+				padding: 4em 0;
+			}
+			@include media($large-screen) {
+				padding: 5em 0;
+			}
 
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: cover;
-    .overlay{
-      width: 100%;
-      height: 100%;
-      background: rgba( $dark-pink, 0.8 );
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-    .hero-inner{
-      z-index: 4;
-      position: relative;
-    }
-  }
+			.button.pink.soft.border{
+				padding: 1em;
+				@include media($medium-screen) {
+					padding: 1.2em 2.8em;
+				}
+				@include media($large-screen) {
+					padding: 1.2em 2.8em;
+				}
+			}			
+		} 
+	}
+	&.left{
+		text-align: left;
+		position: relative;
+
+		background-repeat: no-repeat;
+		background-position: top;
+		background-size: cover;
+		.overlay{
+			width: 100%;
+			height: 100%;
+			background: rgba( $dark-pink, 0.8 );
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+		.hero-inner{
+			z-index: 4;
+			position: relative;
+		}
+	}
+	&.about{
+		
+		text-align: left;
+		background: white;
+		background-repeat: no-repeat;
+		background-position: -190px top;
+
+		min-height: 265px;
+		background-size: 305px;
+
+		@include media($medium-screen) {
+			min-height: 345px;
+			background-size: 385px;
+			background-position: -75px top;
+		}
+		@include media($large-screen) {
+			min-height: 545px;
+			background-size: 585px;
+			background-position: left top;
+		}
+
+		.hero-inner {
+			color: $gray;
+
+			@include span-columns(8);
+			@include shift(4);
+			@include omega(1n);
+
+			@include media($medium-screen) {
+				@include span-columns(6);
+				@include shift(6);
+				@include omega(1n);
+			}
+			@include media($large-screen) {
+				@include span-columns(6);
+				@include shift(6);
+				@include omega(1n);
+			}
+		} 
+	}
 }
