start Tours page

--- a/public/partials/_menu.jade
+++ b/public/partials/_menu.jade
@@ -6,9 +6,9 @@ header.navigation
 		.nav
 			ul#navigation-menu
 				li.nav-link
-					a(href='homepage/') Homepage
+					a(href='/homepage/') Homepage
 				li.nav-link
-					a(href='javascript:void(0)') About Us
+					a(href='/tours/') Tours
 				li.nav-link
 					a(href='javascript:void(0)') Contact
 				li.nav-link.more
