--- a/public/tours/index.jade
+++ b/public/tours/index.jade
@@ -1,16 +1,13 @@
-div(class="hero large" style="background-image: url('/images/homepage-hero.png')")
+div(class="hero left" style="background-image: url('/images/homepage-hero.png')")
 	.hero-inner
 		.hero-copy
 			.container
-				h1 Start new Laponie Adventure
+				h1 Awesome adventure in laponie
+
 				p
 					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
-				p
-					| We are located in the north of sweden, near Kiruna.
-				p
-					| We are only 6 km away from ice Hotel.
 
-				a(class="button white border" href="/") Discover Tour
+	.overlay
 
 .wrapper.center
 	.container
@@ -18,22 +15,6 @@ div(class="hero large" style="background-image: url('/images/homepage-hero.png')
 		p
 			| lorem ipsum dolor sit atmet
 
-
-div(class="hero left" style="background-image: url('/images/homepage-hero.png')")
-	.hero-inner
-		.hero-copy
-			.container
-				h2 Adventure tour
-				.time 2 jours et 3 nuits
-				p
-					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
-				p
-					| We are located in the north of sweden, near Kiruna.
-				p
-					| We are only 6 km away from ice Hotel.
-
-				a(class="button pink soft" href="/") Adventure Tour
-	.overlay
 
 .wrapper.pink.soft
 	.container
@@ -79,6 +60,7 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 				p
 					| lorem ipsum dolor sit atmet
 				a(class="button pink hard" href="/") Summer season
+
 
 include ../partials/_aboutme.jade
 include ../partials/_contact.jade
