update tours page

--- a/public/partials/_menu.jade
+++ b/public/partials/_menu.jade
@@ -10,7 +10,7 @@ header.navigation
 				li.nav-link
 					a(href='/tours/') Tours
 				li.nav-link
-					a(href='javascript:void(0)') Contact
+					a(href='/winter-tours/') Winter tours
 				li.nav-link.more
 					a(href='javascript:void(0)') More
 					ul.submenu
