--- a/public/style/components/_header.scss
+++ b/public/style/components/_header.scss
@@ -1,15 +1,16 @@
 header.navigation {
 	$navigation-padding: 1em;
 	$navigation-background: white;
-	$navigation-color: transparentize(white, 0.3);
-	$navigation-color-hover: white;
-	$navigation-height: 60px;
+	$navigation-color: $gray;
+	$navigation-color-hover: darken($gray, 10%);
+  $navigation-height: 90px;
+	$navigation-submenu-height: 60px;
 	$navigation-nav-button-background: $base-accent-color;
 	$navigation-nav-button-background-hover: lighten($navigation-background, 10);
 	$navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20);
 	$navigation-search-background: lighten($navigation-background, 5);
 	$navigation-search-border: 1px solid darken($navigation-background, 5);
-	$navigation-active-link-color: transparentize(white, 0.5);
+	$navigation-active-link-color: white;
 	$navigation-submenu-padding: 1em;
 	$navigation-submenu-width: 12em;
 	$horizontal-bar-mode: $large-screen;
@@ -110,7 +111,8 @@ header.navigation {
   	a {
   		color: $navigation-color;
   		display: inline-block;
-  		font-weight: 400;
+  		font-weight: 700;
+      text-transform: uppercase;
 
   		@include media ($horizontal-bar-mode) {
   			padding-right: 1em;
@@ -211,7 +213,7 @@ header.navigation {
   		padding-right: 0;
 
   		@include media($horizontal-bar-mode) {
-  			line-height: $navigation-height / 1.3;
+  			line-height: $navigation-submenu-height / 1.3;
 
   			&:first-child > a {
   				border-top-left-radius: $base-border-radius;
@@ -258,11 +260,4 @@ header.navigation {
   	}
   }
 
-}
-
-.homepage{
-  header.navigation{
-    position: absolute;
-    background: transparent;
-  }
 }
