--- a/public/style/components/_hero.scss
+++ b/public/style/components/_hero.scss
@@ -103,6 +103,17 @@
 			}
 		} 
 	}
+	&.mushing{
+		.hero-inner {
+			padding: 4em 0;
+			@include media($medium-screen) {
+				padding: 4em 0;
+			}
+			@include media($large-screen) {
+				padding: 10em 0;
+			}
+		} 
+	}
 	&.about{
 		.hero-inner {
 			padding: 2em 0;
@@ -126,6 +137,25 @@
 	}
 	&.left{
 		text-align: left;
+		position: relative;
+
+		background-repeat: no-repeat;
+		background-position: top;
+		background-size: cover;
+		.overlay{
+			width: 100%;
+			height: 100%;
+			background: rgba( $dark-pink, 0.8 );
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+		.hero-inner{
+			z-index: 4;
+			position: relative;
+		}
+	}
+	&.mushing{
 		position: relative;
 
 		background-repeat: no-repeat;
@@ -183,5 +213,33 @@
 				@include omega(1n);
 			}
 		} 
+	}
+	&.card{
+		.hero-inner{
+			max-width: inherit;
+		}
+		.content{
+
+			background: white;
+			color: $gray;
+			text-align: left;
+
+			@include span-columns(6);
+			@include omega(1n);
+			&.right{
+				@include shift(6);
+			}
+
+			@include media($medium-screen) {
+				@include span-columns(6);
+				@include shift(6);
+				@include omega(1n);
+			}
+			@include media($large-screen) {
+				@include span-columns(6);
+				@include shift(6);
+				@include omega(1n);
+			}
+		}
 	}
 }
