--- a/public/winter-tours/index.jade
+++ b/public/winter-tours/index.jade
@@ -2,7 +2,7 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 	.hero-inner
 		.hero-copy
 			.container
-				h1 Awesome adventure in laponie
+				h1 Winter tours
 
 				p
 					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
@@ -11,7 +11,6 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 
 .wrapper
 	.container
-		h2 winter tour
 		p
 			| lorem ipsum dolor sit atmet
 
@@ -32,33 +31,50 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 				a(class="button pink soft" href="/") Adventure Tour
 	.overlay
 
+
+div(class="hero card" style="background-image: url('/images/homepage-hero.png')")
+	.hero-inner
+		.hero-copy
+			.content.right
+				h2 Morning coffee tour
+				.time 2 jours et 3 nuits
+				p
+					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
+				p
+					| We are located in the north of sweden, near Kiruna.
+				p
+					| We are only 6 km away from ice Hotel.
+
+				a(class="button pink soft" href="/") Morning coffee tour
+	.overlay
+
 .wrapper
 	.container
-		.cards
+		.cards.mirrored
 			.card
 				.card-image
 					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
-				.card-header
-					h3 Adventure
 				.card-content
+					h3 Adventure
+					.time 2 jours et 3 nuits
 					p
 						| lorem ipsum dolor sit atmet
 					a(class="button pink soft" href="/") Adventure Tour
 			.card
 				.card-image
 					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
-				.card-header
-					h3 Adventure
 				.card-content
+					h3 Adventure
+					.time 2 jours et 3 nuits
 					p
 						| lorem ipsum dolor sit atmet
 					a(class="button pink soft" href="/") Adventure Tour
 			.card
 				.card-image
 					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
-				.card-header
-					h3 Adventure
 				.card-content
+					h3 Adventure
+					.time 2 jours et 3 nuits
 					p
 						| lorem ipsum dolor sit atmet
 					a(class="button pink soft" href="/") Adventure Tour
