--- a/public/winter-tours/index.jade
+++ b/public/winter-tours/index.jade
@@ -32,52 +32,34 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 	.overlay
 
 
-div(class="hero card" style="background-image: url('/images/homepage-hero.png')")
-	.hero-inner
-		.hero-copy
-			.content.right
-				h2 Morning coffee tour
-				.time 2 jours et 3 nuits
-				p
-					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
-				p
-					| We are located in the north of sweden, near Kiruna.
-				p
-					| We are only 6 km away from ice Hotel.
+div(class="hero card right")
+	div(class="hero-inner"  style="background-image: url('/images/homepage-hero.png')")
+	.hero-copy
+		h2 Morning coffee tour
+		.time 2 jours et 3 nuits
+		p
+			| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
+		p
+			| We are located in the north of sweden, near Kiruna.
+		p
+			| We are only 6 km away from ice Hotel.
 
-				a(class="button pink soft" href="/") Morning coffee tour
-	.overlay
+		a(class="button pink soft" href="/") Morning coffee tour
 
-.wrapper
-	.container
-		.cards.mirrored
-			.card
-				.card-image
-					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
-				.card-content
-					h3 Adventure
-					.time 2 jours et 3 nuits
-					p
-						| lorem ipsum dolor sit atmet
-					a(class="button pink soft" href="/") Adventure Tour
-			.card
-				.card-image
-					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
-				.card-content
-					h3 Adventure
-					.time 2 jours et 3 nuits
-					p
-						| lorem ipsum dolor sit atmet
-					a(class="button pink soft" href="/") Adventure Tour
-			.card
-				.card-image
-					img(src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png")
-				.card-content
-					h3 Adventure
-					.time 2 jours et 3 nuits
-					p
-						| lorem ipsum dolor sit atmet
-					a(class="button pink soft" href="/") Adventure Tour
+div(class="hero card left")
+	.hero-copy
+		h2 Morning coffee tour
+		.time 2 jours et 3 nuits
+		p
+			| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
+		p
+			| We are located in the north of sweden, near Kiruna.
+		p
+			| We are only 6 km away from ice Hotel.
+
+		a(class="button pink soft" href="/") Morning coffee tour
+
+	div(class="hero-inner"  style="background-image: url('/images/homepage-hero.png')")
 
 .wrapper.pink.fade
 	.container
