--- a/public/winter-tours/index.jade
+++ b/public/winter-tours/index.jade
@@ -32,6 +32,7 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 	.overlay
 
 
+
 div(class="hero card right")
 	div(class="hero-inner"  style="background-image: url('/images/homepage-hero.png')")
 	.hero-copy
@@ -47,7 +48,7 @@ div(class="hero card right")
 		a(class="button pink soft" href="/") Morning coffee tour
 
 div(class="hero card left")
-	.hero-copy
+	.hero-copy	
 		h2 Morning coffee tour
 		.time 2 jours et 3 nuits
 		p
@@ -61,34 +62,19 @@ div(class="hero card left")
 
 	div(class="hero-inner"  style="background-image: url('/images/homepage-hero.png')")
 
-.wrapper.pink.fade
-	.container
-		.seasons
-			.season
-				h3 Autumn
-				p
-					| lorem ipsum dolor sit atmet
-				a(class="button pink hard" href="/") Autumn season
-			.season
-				h3 Autumn
-				p
-					| lorem ipsum dolor sit atmet
-				a(class="button pink hard" href="/") Summer season
+div(class="hero card right")
+	div(class="hero-inner"  style="background-image: url('/images/homepage-hero.png')")
+	.hero-copy
+		h2 Morning coffee tour
+		.time 2 jours et 3 nuits
+		p
+			| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
+		p
+			| We are located in the north of sweden, near Kiruna.
+		p
+			| We are only 6 km away from ice Hotel.
 
-div(class="hero mushing" style="background-image: url('/images/homepage-hero.png')")
-	.hero-inner
-		.hero-copy
-			.container
-				h2 Mushing School
-				p
-					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
-				p
-					| We are located in the north of sweden, near Kiruna.
-				p
-					| We are only 6 km away from ice Hotel.
-
-				a(class="button pink soft" href="/") Mushing School Adventure
-	.overlay
+		a(class="button pink soft" href="/") Morning coffee tour
 
 
 include ../partials/_aboutme.jade
