--- a/public/partials/_menu.jade
+++ b/public/partials/_menu.jade
@@ -11,24 +11,5 @@ header.navigation
 					a(href='/tours/') Tours
 				li.nav-link
 					a(href='/winter-tours/') Winter tours
-				li.nav-link.more
-					a(href='javascript:void(0)') More
-					ul.submenu
-						li
-							a(href='javascript:void(0)') Submenu Item
-						li
-							a(href='javascript:void(0)') Another Item
-						li.more
-							a(href='javascript:void(0)') Item with submenu
-							ul.submenu
-								li
-									a(href='javascript:void(0)') Sub-submenu Item
-								li
-									a(href='javascript:void(0)') Another Item
-								li.more
-									a(href='javascript:void(0)') Another submenu
-									ul.submenu
-										li
-											a(href='javascript:void(0)') Sub-submenu
-										li
-											a(href='javascript:void(0)') An Item
+				li.nav-link
+					a(href='/tour/') Tour
