--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -18,6 +18,7 @@ $visual-grid-opacity: 0.2;
 @import "components/_hero.scss";
 @import "components/_seasons.scss";
 @import "components/_contact.scss";
+@import "components/_tour.scss";
 
 body{
 	background: #fff;
