update tour page

--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -19,6 +19,7 @@ $visual-grid-opacity: 0.2;
 @import "components/_seasons.scss";
 @import "components/_contact.scss";
 @import "components/_tour.scss";
+@import "components/_carousel.scss";
 
 body{
 	background: #fff;
