--- a/public/tour/_layout.jade
+++ b/public/tour/_layout.jade
@@ -3,8 +3,11 @@ html
 	head
 		
 		include ../partials/_head.jade
+		link(rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.3.11/slick.css")
 
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js")
+		script(src="//cdn.jsdelivr.net/jquery.slick/1.3.11/slick.min.js")
+		script(src="/scripts/gallery.js")
 		
 	body
 		include ../partials/_menu.jade
