--- a/public/tour/index.jade
+++ b/public/tour/index.jade
@@ -33,21 +33,21 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 			p
 				| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
 
-div(class="hero left" style="background-image: url('/images/homepage-hero.png')")
-	.hero-inner
-		.hero-copy
-			.container
-				h2 Adventure tour
-				.time 2 jours et 3 nuits
-				p
-					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
-				p
-					| We are located in the north of sweden, near Kiruna.
-				p
-					| We are only 6 km away from ice Hotel.
 
-				a(class="button pink soft" href="/") Adventure Tour
-	.overlay
+.wrapper.gallery
+	.container
+		.carousel
+			div
+				img(src="https://d13yacurqjgara.cloudfront.net/users/347241/screenshots/1759762/thy_sidemenu_day_night_k_1x.png")
+			div
+				img(src="https://d13yacurqjgara.cloudfront.net/users/347241/screenshots/1759762/thy_sidemenu_day_night_k_1x.png")
+			div
+				img(src="https://d13yacurqjgara.cloudfront.net/users/347241/screenshots/1759762/thy_sidemenu_day_night_k_1x.png")
+			div
+				img(src="https://d13yacurqjgara.cloudfront.net/users/347241/screenshots/1759762/thy_sidemenu_day_night_k_1x.png")
+
+include ../partials/_aboutme.jade
+
 
 .wrapper.pink.soft
 	.container
@@ -80,21 +80,7 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 						| lorem ipsum dolor sit atmet
 					a(class="button white" href="/") Adventure Tour
 
-.wrapper.pink.fade
-	.container
-		.seasons
-			.season
-				h3 Autumn
-				p
-					| lorem ipsum dolor sit atmet
-				a(class="button pink hard" href="/") Autumn season
-			.season
-				h3 Autumn
-				p
-					| lorem ipsum dolor sit atmet
-				a(class="button pink hard" href="/") Summer season
 
-include ../partials/_aboutme.jade
 include ../partials/_contact.jade
 include ../partials/_footer.jade
 
