add mushing school page

--- a/public/partials/_menu.jade
+++ b/public/partials/_menu.jade
@@ -13,3 +13,5 @@ header.navigation
 					a(href='/winter-tours/') Winter tours
 				li.nav-link
 					a(href='/tour/') Tour
+				li.nav-link
+					a(href='/mushing/') Mushing School
