--- a/public/style/components/_hero.scss
+++ b/public/style/components/_hero.scss
@@ -101,7 +101,16 @@
 			@include media($large-screen) {
 				padding: 5em 0;
 			}
-		} 
+		}
+		&.mushing{
+			padding: 4em 0;
+			@include media($medium-screen) {
+				padding: 4em 0;
+			}
+			@include media($large-screen) {
+				padding: 4em 0 10em 0;
+			}
+		}
 	}
 	&.mushing{
 		.hero-inner {
