--- a/public/partials/_menu.jade
+++ b/public/partials/_menu.jade
@@ -15,3 +15,5 @@ header.navigation
 					a(href='/tour/') Tour
 				li.nav-link
 					a(href='/mushing/') Mushing School
+				li.nav-link
+					a(href='/about/') About Me
