--- a/public/style/components/_hero.scss
+++ b/public/style/components/_hero.scss
@@ -123,6 +123,17 @@
 			}
 		} 
 	}
+	&.aboutme{
+		.hero-inner {
+			padding: 4em 0;
+			@include media($medium-screen) {
+				padding: 4em 0;
+			}
+			@include media($large-screen) {
+				padding: 4em 0 20em;
+			}
+		} 
+	}
 	&.about{
 		.hero-inner {
 			padding: 2em 0;
@@ -165,6 +176,25 @@
 		}
 	}
 	&.mushing{
+		position: relative;
+
+		background-repeat: no-repeat;
+		background-position: top;
+		background-size: cover;
+		.overlay{
+			width: 100%;
+			height: 100%;
+			background: rgba( $dark-pink, 0.8 );
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+		.hero-inner{
+			z-index: 4;
+			position: relative;
+		}
+	}
+	&.aboutme{
 		position: relative;
 
 		background-repeat: no-repeat;
