add contact, update about

--- a/public/partials/_contact.jade
+++ b/public/partials/_contact.jade
@@ -6,9 +6,12 @@
 				p
 					| Lorem ipsum
 				.social
-					a(href="/") facebook
-					a(href="/") tripadvisor
-					a(href="/") youtube
+					a(href="/")
+						span(class="socicon socicon-facebook")
+					a(href="/" class="tripadvizor")
+						span(class="socicon socicon-tripadvizor")
+					a(href="/")
+						span(class="socicon socicon-twitter")
 			.col-50
 				form
 					label Name
