--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -12,6 +12,8 @@ $visual-grid-opacity: 0.2;
 @import "components/_typography.scss";
 @import "components/_layout.scss";
 @import "components/_header.scss";
+// @import "components/_socicon.css";
+// @import "node_modules/iconfonts/stylesheets/ionicons";
 
 
 @import "components/_cards.scss";
