--- a/public/partials/_head.jade
+++ b/public/partials/_head.jade
@@ -4,4 +4,5 @@ script(src='/bundle.js')
 
 link(rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:700,900")
 link(rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,500,600,700,800")
+link(rel="stylesheet" href="/style/socicon.css")
 link(rel="stylesheet" href="/style/main.css")
