update various things

--- a/public/contact/_layout.jade
+++ b/public/contact/_layout.jade
@@ -3,6 +3,7 @@ html
 	head
 		
 		include ../partials/_head.jade
+		link(rel="stylesheet" href="/style/pages/contact.css")
 
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js")
 		
