--- a/public/partials/_menu.jade
+++ b/public/partials/_menu.jade
@@ -17,3 +17,5 @@ header.navigation
 					a(href='/mushing/') Mushing School
 				li.nav-link
 					a(href='/about/') About Me
+				li.nav-link
+					a(href='/contact/') Contact
