update various things

--- a/public/homepage/index.jade
+++ b/public/homepage/index.jade
@@ -35,6 +35,22 @@ div(class="hero left" style="background-image: url('/images/homepage-hero.png')"
 				a(class="button pink soft" href="/") Adventure Tour
 	.overlay
 
+div(class="hero mushing" style="background-image: url('/images/homepage-hero.png')")
+	.hero-inner
+		.hero-copy
+			.container
+				h2 Mushing school
+				.time 2 jours et 3 nuits
+				p
+					| Husky Voice offer sleds dog tours with a maximum of 4 guests per tour.
+				p
+					| We are located in the north of sweden, near Kiruna.
+				p
+					| We are only 6 km away from ice Hotel.
+
+				a(class="button pink soft" href="/") Adventure Tour
+	.overlay
+
 .wrapper.pink.soft
 	.container
 		.cards
