--- a/public/style/components/_cards.scss
+++ b/public/style/components/_cards.scss
@@ -33,6 +33,7 @@
 
 			img {
 				width: 100%;
+				height: auto;
 				@include transition (all 0.2s ease-in-out);
 				background: $card-image-background;
 			}
